# decentralized-lan

./: CMakeLists.txt  Notes.txt  main.cpp
blockchain/: CMakeLists.txt
blockchain/include/: block.hpp  blockchain.hpp  transaction.hpp
blockchain/src/: block.cpp  blockchain.cpp  transaction.cpp
crypt/: CMakeLists.txt  crypto.hpp  ecdsa.cpp  sha256.cpp
network/: CMakeLists.txt  README.md
network/include/: bcl.hpp  find_hosts.hpp  lan.hpp  network_utils.hpp  node.hpp
network/include/http/: request.hpp  response.hpp  route.hpp
network/src/: find_hosts.cpp  lan.cpp  network_utils.cpp  node.cpp
node/: CMakeLists.txt
node/include/: node.hpp
node/src/: node.cpp
